--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "angular": "^1.5.7",
     "angular-cookies": "^1.5.7",
-    "angular-route": "^1.5.7"
+    "angular-route": "^1.5.7",
+    "ng-dialog": "^0.6.4"
   }
 }
