--- a/travis.yml
+++ b/travis.yml
@@ -3,5 +3,12 @@ language: python
 python:
     - 3.5
 
+env:
+    - DJANGO_VERSION=1.9.8
+
+install:
+  - pip install -q Django==$DJANGO_VERSION
+  - pip install -r requirements.txt
+
 script:
     - python manage.py test
