--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
-dj-database-url==0.4.1
-Django==1.9.8
-django-appconf==1.0.2
-django-compressor==2.0
-djangorestframework==3.4.0
-drf-nested-routers==0.11.1
-rcssmin==1.0.6
-rjsmin==1.0.12
+dj-database-url
+Django
+django-compressor
+djangorestframework
+drf-nested-routers
