--- a/static/package.json
+++ b/static/package.json
@@ -9,6 +9,7 @@
     "angular": "^1.5.7",
     "angular-cookies": "^1.5.7",
     "angular-route": "^1.5.7",
+    "angular-ui-router": "^1.0.0-beta.3",
     "jquery": "^3.1.0",
     "ng-dialog": "^0.6.4",
     "underscore": "^1.8.3"
