--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
 dj-database-url==0.4.1
-Django==1.9.8
+Django==1.10.2
 django-appconf==1.0.2
-django-compressor==2.0
-djangorestframework==3.4.0
+django-compressor==2.1
+djangorestframework==3.4.7
 drf-nested-routers==0.11.1
+flake8==3.4.1
+jedi==0.10.2
+mccabe==0.6.1
+pep8==1.7.0
+pycodestyle==2.3.1
+pyflakes==1.5.0
 rcssmin==1.0.6
 rjsmin==1.0.12
